Fixing some overlapping layout problems

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,5 +7,5 @@ body {
 }
 
 #play-area {
-    margin: 20px;
+    padding: 20px;
 }
